#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2003				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff W. Boote
#			Internet2
#
#	Date:		Tue Sep  9 16:24:58 MDT 2003
#
#	Description:	constructing owamp conf files from templates
#		This doesn't really do this yet - it just provides
#		examples.
noinst_DATA	= bwctld.conf bwctld.limits
EXTRA_DIST	= bwctld.conf bwctld.limits
