#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2003				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff W. Boote
#			Internet2
#
#	Date:		Tue Sep  9 16:24:58 MDT 2003
#
#	Description:	constructing owamp conf files from templates
#		This doesn't really do this yet - it just provides
#		examples.
noinst_DATA	= README bwctld.conf bwctld.limits bwctld.sh bwctld.init bwctld.limits.default bwctld.conf.default
EXTRA_DIST	= $(noinst_DATA)
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
