#
#      $Id: Makefile.am 426 2008-01-15 15:43:41Z aaron $
#
#########################################################################
#									#
#			   Copyright (C)  2008				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Aaron M. Brown
#			Internet2
#
#	Date:		Thu Jul 10 11:16:15 EDT 2008
#
#	Description:	contributed scripts

noinst_DATA	= sample_hook.pl
EXTRA_DIST	= $(noinst_DATA)
